--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
         {% if title %}
         <title>{{ title }}</title>
         {% else %}
-        <title>title goes here</title>
+        <title>Gratitude</title>
         {% endif %}
     </head>
     <body>
