--- a/app/templates/gratitude.html
+++ b/app/templates/gratitude.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <p>
-        Using the word '{{ word }}', talk about something you're grateful for.
+        Using the word '{{ word }}' (or a form of that word), write something you're grateful for.
     </p>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
