Language and CSS

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,7 @@
         {% else %}
         <title>Gratitude</title>
         {% endif %}
+        <link rel="stylesheet" type="text/css" href="static/style.css">
     </head>
     <body>
         {% with messages = get_flashed_messages() %}
