--- a/app/templates/hello.html
+++ b/app/templates/hello.html
@@ -12,6 +12,9 @@
     The purpose of this is to help inspire you to think about those little things that you're grateful for.
 </p>
 <p>
+    NOTE: Logging is kept to a minimum, but please don't enter anything sensitive or personal into this exercise.
+</p>
+<p>
     <a href="/letter">Ready? Click here to begin.</a>
 </p>
 {% endblock %}
