--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,11 +1,12 @@
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="static/style.css">
         {% if title %}
         <title>{{ title }}</title>
         {% else %}
         <title>Gratitude</title>
         {% endif %}
-        <link rel="stylesheet" type="text/css" href="static/style.css">
     </head>
     <body>
         {% with messages = get_flashed_messages() %}
