--- a/app/templates/letter.html
+++ b/app/templates/letter.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 <p>
-    A random letter has been chosen for you. That letter is: {{ letter }}
+    A random letter has been chosen for you.<br/>
+    That letter is: {{ letter }}
 </p>
 <p>
     Think of a word that starts with that letter, type it in the box below, and submit.
