--- a/app/templates/thanks.html
+++ b/app/templates/thanks.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <p>
-        Thank you for sharing.
-    </p>
 <p>
-    <a href="/">Go back to the beginning</a>
+    Thank you for participating.
+</p>
+<p>
+    This exercise was to encourage positive thinking, and your answers were not logged.
+</p>
+<p>
+    <a href="/">Click here to do it again</a> or 
+    <a href="https://github.com/mb243/web-gratitude">click here to view the code on GitHub.</a>
 </p>
 {% endblock %}
